--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -10,10 +10,10 @@
   <body>
      <div id="navbar">
       <ul>
-        <li><a href="#home" >Home</a></li>
+        <li><a href="/" >Home</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li style="float: right"><a href="#contact" class="active">About</a></li>
+        <li style="float: right"><a href="/contact" class="active">About</a></li>
       </ul>
 
   </body>
