--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,10 +10,10 @@
   <body>
     <div id="navbar">
       <ul>
-        <li><a href="#home" class="active">Home</a></li>
+        <li><a href="/" class="active">Home</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li style="float: right"><a href="#contact">About</a></li>
+        <li style="float: right"><a href="/contact">About</a></li>
       </ul>
 
       <h1>Welcome to my Home Page</h1>
