--- a/views/content.ejs
+++ b/views/content.ejs
@@ -4,19 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <title>Assignment 1</title>
+     <link rel="stylesheet" href="/stylesheets/styles.css" />
+    <title>Contact Me</title>
   </head>
   <body>
-    <div id="navbar">
+     <div id="navbar">
       <ul>
-        <li><a href="/" class="active">Home</a></li>
+        <li><a href="/" >Home</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li style="float: right"><a href="/contact">About</a></li>
+        <li style="float: right"><a href="/contact" >About</a></li>
       </ul>
 
-      <h1>Welcome to my Home Page</h1>
-    </div>
   </body>
 </html>
