--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,45 +1,51 @@
 <div id="navbar">
   <ul>
-     <li href="/home"><span class="logo" >hiro</span></li>
+    <!-- Logo -->
+    <li href="/home"><span class="logo">hiro</span></li>
 
-     <% if (title == "Home"){ %>
-        <li class="nav-item active">
-        <% } else  { %>
-        <li class="nav-item">
-        <% } %>
-          <a class="nav-link" href="/home">Home </a>
-        </li>
+    <!-- Home link -->
+    <% if (title == "Home"){ %>
+      <li class="nav-item active">
+    <% } else  { %>
+      <li class="nav-item">
+    <% } %>
+      <a class="nav-link" href="/home">Home</a>
+    </li>
 
-         <% if (title == "About") { %>
-        <li class="nav-item active">
-        <% } else  { %>
-        <li class="nav-item">
-        <% } %>
-          <a class="nav-link" href="/about">About </a>
-        </li>
+    <!-- About link -->
+    <% if (title == "About") { %>
+      <li class="nav-item active">
+    <% } else  { %>
+      <li class="nav-item">
+    <% } %>
+      <a class="nav-link" href="/about">About</a>
+    </li>
 
-      <% if (title == "Services") { %>
-        <li class="nav-item active">
-        <% } else  { %>
-        <li class="nav-item">
-        <% } %>
-          <a class="nav-link" href="/services">Services </a>
-        </li>
+    <!-- Services link -->
+    <% if (title == "Services") { %>
+      <li class="nav-item active">
+    <% } else  { %>
+      <li class="nav-item">
+    <% } %>
+      <a class="nav-link" href="/services">Services</a>
+    </li>
 
-        <% if (title == "Projects") { %>
-        <li class="nav-item active">
-        <% } else  { %>
-        <li class="nav-item">
-        <% } %>
-          <a class="nav-link" href="/projects">Projects </a>
-        </li>
+    <!-- Projects link -->
+    <% if (title == "Projects") { %>
+      <li class="nav-item active">
+    <% } else  { %>
+      <li class="nav-item">
+    <% } %>
+      <a class="nav-link" href="/projects">Projects</a>
+    </li>
 
-         <% if (title == "Contact") { %>
-        <li  class="nav-item active contact">
-        <% } else  { %>
-        <li  class="nav-item contact">
-        <% } %>
-          <a class="nav-link" href="/contact">Contact </a>
-        </li>
+    <!-- Contact Me link -->
+    <% if (title == "Contact Me") { %>
+      <li class="nav-item active contact">
+    <% } else  { %>
+      <li class="nav-item contact">
+    <% } %>
+      <a class="nav-link" href="/contact">Contact Me</a>
+    </li>
   </ul>
 </div>
