--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
-<footer>Copyright&copy; Hung Nguyen 2023 COMP229-SEC.401</footer>
+<footer>Copyright&copy; Hung Nguyen 2023 COMP229-SECTION.401</footer>
 </body>
 </html>
