--- a/server/views/contact.ejs
+++ b/server/views/contact.ejs
@@ -20,7 +20,7 @@
      </p>
     </div>
     <div class="form-container flex-item">
-      <form action="/">
+      <form action="../contact-list/add" method="POST">
     <!-- First Name input -->
     <label for="firstName">First Name:<span class="required">*</span></label> 
     <input type="text" id="firstName" name="firstName" required><br>
