--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="/stylesheets/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel='stylesheet' href="/@fortawesome/fortawesome-free/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <script src="/jquery/dist/jquery.min.js" defer></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js" defer></script>
+    <script src="/Scripts/app.js" defer></script>
     <title><%= title %></title>
   </head>
   <body>
