--- a/server/views/contact-list/list.ejs
+++ b/server/views/contact-list/list.ejs
@@ -22,6 +22,8 @@
                     <% }); %>
                 
             </table>
+            <br>
+            <a href="/logout">Log Out</a>
     </div>
 </main>
 <%- include ../partials/footer.ejs %>
