--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -2,7 +2,7 @@
 
 <div class="login-container">
     <h1>Login</h1>
-    <form action="/login" method="POST">
+    <form action="./login" method="POST">
         <input type="text" name="username" id="username" placeholder="Username">
         <input type="password" name="password" id="password" placeholder="Password">
     <button type="submit" class="loginBtn">Login Now</button>
