--- a/server/views/contact-list/list.ejs
+++ b/server/views/contact-list/list.ejs
@@ -3,7 +3,9 @@
 <main>
     <div class="contact-list-container">
         <h2>Business Contact List</h2>
+       
         <table class="contact-table ">
+           <a href="contact-list/add"><button class="tooltip" >+<span class="tooltiptext">Add new contact</span></button></a> 
                 <tr>
                     <th class="text-center">Name</th>
                     <th class="text-center">Phone Number</th>
@@ -23,7 +25,6 @@
                 
             </table>
             <br>
-            <a href="/logout">Log Out</a>
     </div>
 </main>
 <%- include ../partials/footer.ejs %>
