--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -45,8 +45,23 @@ li a:hover:not(.active) {
   transition: 500ms;
 }
 
+div.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #333;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+li.dropdown-content a:hover {
+  background-color: #333;
+}
+li.dropdown:hover div.dropdown-content {
+  display: block;
+}
 /* Contact Me link style */
-li.contact {
+li.contact, li.dropdown, li.loginNav{
   float: right;
 }
 
@@ -94,8 +109,11 @@ footer {
     font-size: 1.3rem;
   }
   li,
-  li.contact {
+  li.contact, li.dropdown, li.loginNav {
     float: none;
+  }
+  div.dropdown-content{
+    width: 80%;
   }
   .logo {
     font-size: 1.5rem;
@@ -249,6 +267,37 @@ button:hover {
   color: #e61a57;
 }
 
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+button.tooltip{
+  border-color: #e61ae6;
+  font-size: larger;
+  font-weight: 900;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+button.tooltip:hover{
+  border-color: #1ae687;
+  font-weight: bolder;
+  cursor: pointer;
+}
+
 div.contact-list-container{
   margin: 20% auto;
   padding: 20px;
@@ -329,6 +378,18 @@ div.login-container > form > button.loginBtn:hover{
   font-weight: bolder;
 }
 
+div.login-container > form > p {
+  text-align: center;
+}
+
+div.login-container > form > p > a.register-link{
+  text-decoration: none;
+  color: #e76f51;
+  font-weight: bolder;
+}
+div.login-container > form > p >  a.register-link:hover{
+  color: #2e1ae6;
+}
 
 div.edit-container  > form
 {
