--- a/server/views/partials/navbar.ejs
+++ b/server/views/partials/navbar.ejs
@@ -39,15 +39,29 @@
       <a class="nav-link" href="/projects">Projects</a>
     </li>
 
-    <!-- Projects link -->
-    <% if (title == "Login") { %>
-      <li class="nav-item active">
-    <% } else  { %>
-      <li class="nav-item">
-    <% } %>
-      <a class="nav-link" href="/login">Login</a>
-    </li>
-
+    <!-- Login/Contact-List link -->
+    <% if (displayName == '') { %>
+      <% if (title == "Login") { %>
+        <li class="nav-item loginNav active">
+      <% } else  { %>
+        <li class="nav-item loginNav ">
+      <% } %>
+        <a class="nav-link" href="/login">Login</a>
+      </li>
+    <% }else{ %>
+       <% if (title == "Business Contacts") { %>
+        <li class="nav-item dropdown active"><a>Hi, <%=displayName %>!</a>
+    
+      <% } else  { %>
+       <li class="nav-item dropdown"><a>Hi, <%=displayName %>!</a>
+    
+     <% } %>
+    <div class="dropdown-content">
+          <a href="/contact-list">Contact List</a>
+          <a href="/logout">Log Out</a>
+      </div>
+      </li>
+      <% }%>
     <!-- Contact Me link -->
     <% if (title == "Contact Me") { %>
       <li class="nav-item active contact">
