--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -4,11 +4,11 @@
 <div class="login-container">
     <h1>Register</h1>
     <form action="./register" method="POST">
-        <input type="email" name="email" id="email" placeholder="Email">
-        <input type="text" name="displayName" id="displayName" placeholder="Display name">
-        <input type="text" name="username" id="username" placeholder="Username">
-        <input type="password" name="password" id="password" placeholder="Password">
-        <input type="password" name="password2" id="password2" placeholder="Confirm Password">
+        <input type="email" name="email" id="email" placeholder="Email" required="true" >
+        <input type="text" name="displayName" id="displayName" placeholder="Display name" required="true">
+        <input type="text" name="username" id="username" placeholder="Username" required="true">
+        <input type="password" name="password" id="password" placeholder="Password" required="true">
+        <input type="password" name="password2" id="password2" placeholder="Confirm Password" required="true">
         <p><a href="/login" class="register-link">Already have an account?</a></p>
     <button type="submit" class="loginBtn">Create Account</button>
     
